--- a/recepie_client/android/app/src/main/AndroidManifest.xml
+++ b/recepie_client/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.recepie_client">
-   <application
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <application
         android:label="recepie_client"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
